# native-sea-openssl

./: .gitignore  LICENSE  README.md  android-openssl  build.gradle  settings.gradle
.github/workflows/: publish-aar.yml  release.yml
android-openssl/: CMakeLists.txt  build.gradle  gradlew
android-openssl/src/main/: AndroidManifest.xml
android-openssl/src/main/java/com/example/: OpensslModule.java
examples/RNApp/: .gitignore  App.js  package.json
examples/rn-app/: App.js  README.md  package-lock.json  package.json
examples/rn-app/android/: gradlew
examples/rn-app/android/app/: build.gradle
examples/rn-app/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  openssl_jni.cpp
examples/rn-app/android/app/src/main/java/com/example/androidopenssl/: SimpleOpenSSL.java
examples/rn-app/android/app/src/main/java/com/example/examplernapp/: MainActivity.java
examples/rn-app/android/app/src/main/java/com/rnapp/: MainApplication.kt  NativeOpenSSLModule.kt  OpenSSLModule.java  OpenSSLPackage.java
examples/rn-app_old/: App.js  index.js
examples/rn-app_old/android/: settings.gradle
examples/rn-app_old/android/app/: build.gradle
examples/rn-app_old/android/app/src/main/: AndroidManifest.xml
examples/rn-local/: README.md
examples/rn-local/android/: build.gradle  settings.gradle
examples/rn-local/android/app/: build.gradle
examples/rn-maven/: README.md
examples/rn-maven/android/: build.gradle  settings.gradle
examples/rn-maven/android/app/: build.gradle
examples/script/: setup-rn-app-tempalte.sh
native-sea-openssl/: CMakeLists.txt  build.gradle  gradlew.bat
native-sea-openssl-package/: README.md  index.js  package.json
native-sea-openssl/react-stubs/com/facebook/react/: ReactPackage.java
native-sea-openssl/react-stubs/com/facebook/react/bridge/: NativeModule.java  Promise.java  ReactApplicationContext.java  ReactContextBaseJavaModule.java  ReactMethod.java
native-sea-openssl/react-stubs/com/facebook/react/uimanager/: ViewManager.java
native-sea-openssl/src/main/: AndroidManifest.xml
native-sea-openssl/src/main/cpp/: openssl_jni.cpp
native-sea-openssl/src/main/java/com/example/androidopenssl/: SimpleOpenSSLModule.java  SimpleOpenSSLPackage.java
react-native-native-sea-openssl/: package.json
react-native-native-sea-openssl/android/: native-sea-openssl.aar
scripts/: build-openssl.sh  clean.sh  log-cat.sh  package-aar.sh
